--- a/provisioning/ideato.common/tasks/main.yml
+++ b/provisioning/ideato.common/tasks/main.yml
@@ -1,14 +1,5 @@
 ---
-
-- name: copy all dotfiles to vagrant home
-  copy: src={{ item }} dest=/home/vagrant/
-  with_fileglob:
-    - dot/.git-*
-    - dot/.bash*
-
-- name: install common package
-  apt: name={{ item }} state=present
-  with_items:
-    - git
-    - curl
-    - vim
+- include: dev.yml
+  when: {{ target }} == "development"
+- include: prod.yml
+  when: {{ target }}  == "production"
