add layout for deployment pipeline, configured modules for production-like environment,also enabled CentOS deployment

--- a/provisioning/ideato.common/tasks/main.yml
+++ b/provisioning/ideato.common/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
 - include: dev.yml
-  when: {{ target }} == "development"
+  when: target == "development"
 - include: prod.yml
-  when: {{ target }}  == "production"
+  when: target == "production"
