--- a/provisioning/ideato.database.mysql/tasks/main.yml
+++ b/provisioning/ideato.database.mysql/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
 - include: dev.yml
-  when: {{ target }} == "development"
+  when: target == "development"
 - include: prod.yml
-  when: {{ target }}  == "production"
+  when: target == "production"
