--- a/provisioning/ideato.common/tasks/main.yml
+++ b/provisioning/ideato.common/tasks/main.yml
@@ -2,4 +2,4 @@
 - include: dev.yml
   when: target == "development"
 - include: prod.yml
-  when: target == "production" | target == "staging"
+  when: target == "production" || target == "staging"
