--- a/provisioning/ideato.database.mysql/tasks/RedHat.yml
+++ b/provisioning/ideato.database.mysql/tasks/RedHat.yml
@@ -9,16 +9,6 @@
     name: mysql
     state: started
 
-- name: MySQL | Update the my.cnf
-  template:
-    src: my.cnf.j2
-    dest: /etc/my.cnf
-    owner: root
-    group: root
-    mode: 0644
-  notify:
-    - restart mysql
-
 - name: MySQL | Set the root password.
   mysql_user:
     user: root
@@ -33,7 +23,7 @@
 
 - name: MySQL | Configure MySql for easy access as root user
   template:
-    src: root_dot_my.cnf.j2
+    src: root_my.cnf.j2
     dest: /root/.my.cnf
     owner: root
     group: root
@@ -43,6 +33,25 @@
   mysql_db:
     name: test
     state: absent
+
+- name: add mysql user
+  mysql_user: name={{ ideato_mysql_user }}
+              host={{ item }}
+              password={{ ideato_mysql_password }} priv=*.*:ALL,GRANT
+              login_user=root
+              login_password={{ ideato_mysql_password }}
+  with_items:
+    - "{{ ansible_hostname }}"
+    - 127.0.0.1
+    - ::1
+    - localhost
+
+- name: create mysql databases
+  mysql_db: name={{ item }}
+            state=present
+  with_items:
+    - "{{ ideato_mysql_db }}"
+
 
 
 
