--- a/provisioning/ideato.database.mysql/tasks/RedHat.yml
+++ b/provisioning/ideato.database.mysql/tasks/RedHat.yml
@@ -1,23 +1,25 @@
 - name: MySQL | package requirements
-  apt: name={{ item }} state=present update_cache=yes
+  yum: name={{ item }} state=present update_cache=yes
   with_items:
-  - mysql-server
-  - mysql-client
-  - python-pip
-  - python-devel
-  - mysql-devel
+    - mysql-server
+    - mysql-client
+    - python-pip
+    - python-devel
+    - mysql-devel
 
 - name: Install Ansible prerequire for mysql
   pip: name=mysql-python
 
 - name: MySQL | Ensure MySQL is running
-  service: name=mysql state=started
+  service:
+    name: mysql
+    state: started
 
 - name: MySQL | Set the root password.
   mysql_user:
     user: root
     host: "{{item}}"
-    password: "{{mysql_root_password}}"
+    password: "{{ mysql_root_password }}"
     check_implicit_admin: yes
     login_user: root
     login_password: "{{ mysql_root_password }}"
@@ -31,26 +33,29 @@
   mysql_db:
     name: test
     state: absent
+    login_user: root
+    login_password: "{{ mysql_root_password }}"
+
+- name: create mysql databases
+  mysql_db:
+    name: "{{ item }}"
+    state: present
+    login_user: root
+    login_password: "{{ mysql_root_password }}"
+  with_items:
+    - "{{ ideato_mysql_db }}"
 
 - name: add mysql user
-  mysql_user: name={{ ideato_mysql_user }}
-              host={{ item }}
-              password={{ ideato_mysql_password }} priv=*.*:ALL,GRANT
-              login_user=root
-              login_password={{ ideato_mysql_password }}
+  mysql_user:
+    name: "{{ ideato_mysql_user }}"
+    host: "{{ item }}"
+    password: "{{ ideato_mysql_password }}"
+    priv: "{{ ideato_mysql_db }}.*:ALL"
   with_items:
     - "{{ ansible_hostname }}"
     - 127.0.0.1
     - ::1
     - localhost
-
-- name: create mysql databases
-  mysql_db: name={{ item }}
-            state=present
-  with_items:
-    - "{{ ideato_mysql_db }}"
-
-
 
 
 
