--- a/provisioning/ideato.database.mysql/tasks/RedHat.yml
+++ b/provisioning/ideato.database.mysql/tasks/RedHat.yml
@@ -45,6 +45,14 @@
   with_items:
     - "{{ ideato_mysql_db }}"
 
+- name: MySQL | Configure MySql for easy access as root user
+  template:
+    src: root_my.cnf.j2
+    dest: /root/.my.cnf
+    owner: root
+    group: root
+    mode: 0600
+
 - name: add mysql user
   mysql_user:
     name: "{{ ideato_mysql_user }}"
@@ -56,7 +64,3 @@
     - 127.0.0.1
     - ::1
     - localhost
-
-
-
-
