add composer to stag/prod env

--- a/provisioning/ideato.webserver/tasks/RedHat.yml
+++ b/provisioning/ideato.webserver/tasks/RedHat.yml
@@ -38,4 +38,13 @@
     - php-pecl-sqlite
     - php-pecl-imagik
 
+- name: Install composer
+  shell: chdir=/tmp creates=/tmp/composer.phar curl -sS https://getcomposer.org/installer | php
+
+- name: Copy composer to bin dir
+  shell: chdir=/tmp creates=/usr/bin/composer mv composer.phar /usr/bin/composer
+
+- name: Make composer executable
+  file: path=/usr/bin/composer owner=root group=root mode="0755"
+
 
