--- a/provisioning/ideato.webserver/tasks/Debian.yml
+++ b/provisioning/ideato.webserver/tasks/Debian.yml
@@ -62,3 +62,12 @@
 - apache2_module: state=present name=rewrite
 - apache2_module: state=present name=env
 
+- name: Install composer
+  shell: chdir=/tmp creates=/tmp/composer.phar curl -sS https://getcomposer.org/installer | php
+
+- name: Copy composer to bin dir
+  shell: chdir=/tmp creates=/usr/bin/composer mv composer.phar /usr/bin/composer
+
+- name: Make composer executable
+  file: path=/usr/bin/composer owner=root group=root mode="0755"
+
