--- a/provisioning/ideato.common/tasks/prod.yml
+++ b/provisioning/ideato.common/tasks/prod.yml
@@ -1,6 +1,27 @@
 ---
-- include: Debian.yml
-  when: ansible_os_family == "Debian"
-- include: RedHat.yml
-  when: ansible_os_family  == "RedHat"
+- name: include OS-specific variables
+  include_vars: "{{ ansible_os_family }}.yml"
+-
+ name: Add repos
+ yum: "name={{ item }} state=present"
+ with_items:
+   - http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-5.noarch.rpm
+   - http://rpms.famillecollet.com/enterprise/remi-release-7.rpm
+ sudo: true
+ when: ansible_distribution == 'CentOS'
+-
+ name: enable repos remi
+ yum: "name={{ item }} enablerepo=remi,remi-php56"
+ with_items:
+   - http://rpms.famillecollet.com/enterprise/remi-release-7.rpm
+ sudo: true
+ when: ansible_distribution == 'CentOS'
+-
+ yum: name={{ ideato_common_packages }} state=present update_cache=yes
+ when: ansible_distribution == 'CentOS'
+-
+ name: Package requirements
+ apt: name={{ ideato_common_packages }} state=present update_cache=yes
+ when: ansible_distribution == 'Ubuntu'
+
 
