join os distribution differences on webserver module

--- a/provisioning/ideato.webserver/tasks/Debian.yml
+++ b/provisioning/ideato.webserver/tasks/Debian.yml
@@ -1,8 +1,19 @@
 ---
+- name: include OS-specific variables
+  include_vars: "{{ ansible_os_family }}.yml"
+#php54
+- name: add php54 ppa
+  apt_repository: repo=ppa:ondrej/{{ php_ppa_54 }}
+  when: ansible_distribution_release == "precise"
+
+#php55
+- name: add php55 or php56 ppa
+  apt_repository: repo=ppa:ondrej/{{ php_ppa }}
+  when: ansible_distribution_release == "trusty"
 
 #apache
-- name: install apache
-  apt: name=apache2 state=present
+- name: install Debian packages
+  apt: name={{ ideato_webserver_packages }} update_cache=yes state=present
 
 - name: create virtual host
   template: src=apache/virtual_host.j2
@@ -23,44 +34,11 @@
   command: a2ensite {{ server_name_virtual_host }}.conf
   notify: restart apache
 
-#php54
-- name: add php54 ppa
-  apt_repository: repo=ppa:ondrej/{{ php_ppa_54 }}
-  when: ansible_distribution_release == "precise"
-
-#php55
-- name: add php55 or php56 ppa
-  apt_repository: repo=ppa:ondrej/{{ php_ppa }}
-  when: ansible_distribution_release == "trusty"
-
-#apt update
-- name: Update apt
-  apt: update_cache=yes
-
-- name: install PHP5 packages
-  apt: name={{ item }} state=latest
+- apache2_module: name={{ item }} state=present
   with_items:
     - php5
-    - libapache2-mod-php5
-    - php5-cli
-    - php5-dev
-    - php5-mysql
-    - php-pear
-    - php5-mcrypt
-    - php5-gd
-    - php5-curl
-    - php5-xdebug
-    - php5-readline
-    - php5-sqlite
-    - php5-common
-    - php5-dev
-    - php5-imagick
-    - php5-intl
-    - php5-xmlrpc
-
-- apache2_module: state=present name=php5
-- apache2_module: state=present name=rewrite
-- apache2_module: state=present name=env
+    - rewrite
+    - env
 
 - name: Install composer
   shell: chdir=/tmp creates=/tmp/composer.phar curl -sS https://getcomposer.org/installer | php
