--- a/provisioning/ideato.webserver/tasks/RedHat.yml
+++ b/provisioning/ideato.webserver/tasks/RedHat.yml
@@ -1,8 +1,9 @@
 ---
-
+- name: include OS-specific variables
+  include_vars: "{{ ansible_os_family }}.yml"
 #apache
-- name: install httpd
-  apt: name=httpd state=present
+- name: install RedHat packages
+  yum: name={{ ideato_webserver_packages }} update_cache=yes state=present
 
 - name: create virtual host24
   template: src=apache/virtual_host24.j2
@@ -15,28 +16,6 @@
 - name: enable development site
   shell: ln -s /etc/httpd/sites-available/{{ server_name_virtual_host }}.conf /etc/httpd/conf.d/{{ server_name_virtual_host }}.conf
   notify: restart httpd
-
-- name: Update yum
-  yum: update_cache=yes
-
-- name: install PHP5 packages
-  yum: name={{ item }} state=latest
-  with_items:
-    - php-cli
-    - php-mysqlnd
-    - php-mcrypt
-    - php-gd
-    - php-common
-    - php-intl
-    - php-xmlrpc
-    - php-xml
-    - php-mbstring
-    - php-pdo
-    - php-pear
-    - php-devel
-    - php-pear-Net-Curl
-    - php-pecl-sqlite
-    - php-pecl-imagik
 
 - name: Install composer
   shell: chdir=/tmp creates=/tmp/composer.phar curl -sS https://getcomposer.org/installer | php
